# ObjIRC

./: Info.plist  Makefile  ObjIRC.oc.in  configure.ac  extra.mk.in  meson.build
.fossil-settings/: ignore-glob
ObjIRC.xcodeproj/: project.pbxproj
src/: IRCChannel.h  IRCChannel.m  IRCConnection.h  IRCConnection.m  IRCUser.h  IRCUser.m  Makefile  ObjIRC.h  meson.build
tests/: Makefile  Tests.m  meson.build  test.m  tests.m
